2006-05-22  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/jacl/tcl/lang/Expression.java (ExprParseString,
        looksLikeInt):
        Update strtod() caller and break out of space
        scanning loop as soon as non-space is found.
        Optimize looksLikeInt, invoke charAt() only
        when needed and use inlined char range.
        * src/jacl/tcl/lang/ParseExpr.java:
        * src/jacl/tcl/lang/ScanCmd.java:
        * src/jacl/tcl/lang/StringCmd.java:
        Update strtod() caller.
        * src/jacl/tcl/lang/Util.java (strtoul, strtod,
        CharAt): Optimize int and double parsing functions,
        call charAt() only when needed and avoid invoking
        functions when char literal can be tested.
        * tests/tcl/expr.test: Add literal tests.
        * tests/tclbench/expr.bench: Add runtime test
        for case where non-numeric string is
        compared to itself over an over.
        * tests/tclbench/runbench.tcl:

2006-05-19  Mo DeJong  <mdejong@users.sourceforge.net>

        * docs/TJC/future.html: Remove compiled local
        info since this feature is implemented.
        * docs/TJC/module.html: Add +omit-results info.
        * src/tjc/tjc/library/compileproc.tcl:
        Rework compileproc_scan_keys so that a "result"
        flag is kept for each compiled key. This boolean
        flag is set to false when the command's result
        is not accessed in the proc. Inlined commands
        like set can take advantage of this flag to avoid
        setting the interp result when it will not be
        used. Update the catch, for, foreach, if, switch,
        and while container commands so that they don't
        reset the interp result unless the result of
        the container command is used. Update inlined
        append, incr, lappend, set, and global commands
        so that interp result is not set when unused.
        * src/tjc/tjc/library/emitter.tcl: Update
        for util method so that it will skip the